...
val APP_TOP_LEVEL_NAV_ITEMS = listOf(
    TopNavigationItem(
        destRoute = Home,
        icon = Icons.Filled.GridView,
        label = Res.string.home,
        routeName = "$routeNamePrefix.Home",
        testTag = "nav_home",
    ),
    TopNavigationItem(
        destRoute = AssignmentList,
        icon = Icons.Filled.ImportContacts,
        label = Res.string.assignments,
        routeName = "$routeNamePrefix.Assignment",
...
                                )
                            }
                        )
                    }
                    else if (appUiStateVal.fabState.visible) {
                        ExtendedFloatingActionButton(
                            modifier = Modifier.testTag("floating_action_button"),
                            onClick = appUiStateVal.fabState.onClick,
                            text = {
                                Text(
                                    modifier = Modifier.testTag("floating_action_button_text"),
                                    text = appUiStateVal.fabState.text?.let {
                                        uiTextStringResource(it)
...
