appId: org.openeel.app

---
- assertVisible:
    id: "app_title"
    text: "Home"
- tapOn:
    id: "floating_action_button"
- tapOn: "Add from Link"
- tapOn: "Link*"
- inputText: ${output.TEST_APP_URL}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "App detail"
- tapOn: "Add to school apps"
- tapOn:
    id: "nav_home"
